--- a/Implementacion/pom.xml
+++ b/Implementacion/pom.xml
@@ -12,5 +12,18 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>co.com.sofka</groupId>
+            <artifactId>domain</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>co.com.sofka</groupId>
+            <artifactId>business</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+    </dependencies>
     
 </project>
